tests/golden/compile-pass/std_println_format.rua
fn main() {
    let text = format!("value = {}", 42);
    println!("{}", text);
}
