tests/golden/compile-fail/call_wrong_type_fn.rua
fn require_bool(value: bool) {}

fn main() {
    require_bool(1);
}
